welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:9: error: not found: value estFacemure
while(estFacemure){
      ^Runner:19: error: not found: value estFacemure
while(estFacemure){
      ^Runner:29: error: not found: value estFacemure
 while(estFacemure){
       ^