welcome.lessons.welcome.loopfor.LoopCourse.scala.code
avance();
avance();
avance();
avance();
avance();
avance();
avance();
while(estFacemure){
	gauche();
}
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
while(estFacemure){
	gauche();
}
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
 while(estFacemure){
	gauche();
} 
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
 avance();
